--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>苹果官网</title>
+	<title>苹果</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="https://at.alicdn.com/t/font_786873_prq6vrjszq.css">
 	<script src="jquery-3.3.1.min.js"></script>
